--- a/app/assets/stylesheets/page-components/form.sass
+++ b/app/assets/stylesheets/page-components/form.sass
@@ -1,41 +1,57 @@
-// form
-//   position: relative
-//   padding: 30px
-//   @media #{$small-only}
-//     margin-top: 80px
-//   &.contact-form
-//     background: $grey100
-//     border: 1px solid $grey200
-//   .input-field
-//     position: relative
-//     margin: 20px 0
-//     input, textarea, select
-//       font-size: 14px
-//       color: $grey600
-//       display: block
-//       padding: 10px 20px
-//       width: 100%
-//       border: none
-//       outline: none
-//       background-color: white
-//       +medium
-//       &:focus
-//         outline: none
-//     label
-//       @extend %istok
-//       font-size: 12px
-//       color: $brown300
-//       +bold
-//       text-transform: uppercase
-//       letter-spacing: 2px
-//       &.placeholder
-//         font-size: 16px
-//         position: absolute
-//         pointer-events: none
-//         top: 20px
-//         left: 20px
-//         font-weight: normal
-//         transition: all 0.2s ease
-//         text-transform: none
-//         span
-//           color: $pink600
+form
+  position: relative
+  .input-field
+    position: relative
+    margin: 20px 0
+    input, textarea, select
+      color: $grey900
+      display: block
+      padding: 20px
+      width: 100%
+      border: none
+      outline: none
+      font-weight: 700
+      letter-spacing: 1px
+      border: 1px solid $blueGrey200
+      &:focus, &.used
+        border: 1px solid black
+    textarea
+      +placeholder($blueGrey300)
+    label.placeholder
+      color: $blueGrey300
+      font-weight: 700
+      letter-spacing: 1px
+      position: absolute
+      top: 20px
+      left: 20px
+      pointer-events: none
+      +transition(.25s)
+
+    input:focus ~ label.placeholder, input.used ~ label.placeholder
+      top: 4px
+      font-size: 12px
+      color: $green
+      text-transform: uppercase
+
+  h2, h3
+    line-height: 1
+    margin-bottom: 20px
+    letter-spacing: 2px
+
+  .required-label
+    color: $blueGrey300
+    @media #{$medium-up}
+      position: absolute
+      right: 0
+      top: 10px
+
+  .btn-holder
+    margin: 20px 0
+    text-align: right
+
+  label.error
+    position: absolute
+    font-size: 12px
+    color: red
+    top: initial
+    border-top: -15px
