--- a/app/views/application/_calculate_popup.html.slim
+++ b/app/views/application/_calculate_popup.html.slim
@@ -17,3 +17,61 @@
           .warning-field
             = inline_svg ('icons/warning.svg')
             p Зверніть увагу, що тип антикорозійного захисту впливає на вагу решіткового настилу.
+          p.static-label Виберіть тип решітки
+          .row
+            .columns.medium-6
+              input#zvarna type="radio" name="grilltype"
+              label for="zvarna"
+                .radio-label
+                  = inline_svg ('icons/radio-zvarna.svg')
+                  p Зварна
+            .columns.medium-6
+              input#presovana type="radio" name="grilltype"
+              label for="presovana"
+                .radio-label
+                  = inline_svg ('icons/radio-presovana.svg')
+                  p Пресована
+          p.static-label Введіть розрахункові дані
+          .row
+            .columns.medium-6
+              select
+                option value="all" Товщина несучої стіни
+                option value="1" 1
+                option value="2" 2
+                option value="3" 3
+                option value="4" 4
+            .columns.medium-6
+              select
+                option value="all" Висота несучої стіни
+                option value="1" 2017
+                option value="2" 2016
+                option value="3" 2015
+                option value="4" 2014
+            .columns.medium-6
+              select
+                option value="all" Крок несучих смуг
+                option value="1" 2017
+                option value="2" 2016
+                option value="3" 2015
+                option value="4" 2014
+            .columns.medium-6
+              select
+                option value="all" Крок поперечного прутка
+                option value="1" 2017
+                option value="2" 2016
+                option value="3" 2015
+                option value="4" 2014
+            .columns.medium-6
+              select
+                option value="all" Антикорозійний захист
+                option value="1" 2017
+                option value="2" 2016
+                option value="3" 2015
+                option value="4" 2014
+            .columns.medium-6
+              .btn.dark порахувати
+
+        .details-info
+          p
+            | Якщо у Вас виникли запитання, або за більш детальним розрахунком, звертайтесь у наш інженерний центр за телефоном:
+            a +380 (22) 35-44-64
