--- a/app/views/pages/news.html.slim
+++ b/app/views/pages/news.html.slim
@@ -8,7 +8,7 @@
       .clearfix
         .floated-right.filter-years
           p по рокам:
-          select
+          select.green
             option value="all" Всі роки
             option value="2017" 2017
             option value="2016" 2016
