locales in progress

--- a/app/assets/stylesheets/page-components/header.sass
+++ b/app/assets/stylesheets/page-components/header.sass
@@ -32,7 +32,7 @@ nav.topnav
         &:after
           content: ''
           width: 1px
-          height: 10px
+          height: 14px
           background: $blueGrey600
           position: absolute
           right: 0
@@ -47,8 +47,9 @@ nav.topnav
           padding: 0 20px
     .toggle-language
       background: $blueGrey100
-      padding: 10px 20px
+      padding: 13px 20px
       p
+        font-size: 12px
         font-weight: 700
         text-transform: uppercase
 
