--- a/app/views/application/_calculate_popup.html.slim
+++ b/app/views/application/_calculate_popup.html.slim
@@ -1,4 +1,4 @@
-.popup-wrap.calculate-popup.opened
+.popup-wrap.calculate-popup
   
   .close-popup-btn = inline_svg ('icons/ZRN-icons-close-v1.svg')
 
