--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -115,12 +115,13 @@
   &.fixed
     padding-top: 30px
     height: 430px
+    .squared-download-links
+      max-width: 200px
   .main-icon
     width: 40px
     height: 50px
     margin: 0 auto 30px
   .squared-download-links
-    // max-width: 220px
     margin: 0 auto
     border: 1px solid $blueGrey300
     .floated
