--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -1,48 +1,47 @@
 footer
 
-  
   .main
     .row
       .columns.large-4
-        a.logo-container href=root_path title="Повернутись на головну" = inline_svg ('icons/ZRN-logo-v1.svg')
-        p.small Eдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити: про решітковий настил ми знаємо все!
+        a.logo-container href=root_path title=I18n.t("components.logo_html_title") = inline_svg ('icons/ZRN-logo-v1.svg')
+        p.small = t("footer.intro")
       .columns.medium-4.large-3
-        p.title ми пропонуємо
+        p.title = t("footer.titles.title_1")
         ul.footer-links
           li
-            a href=resh_nastyl_path title="Дізнатись все про решітковий настил" решітковий настил
+            a href=resh_nastyl_path title=I18n.t("header.nav.resh_nastyl_html_title") = t("header.nav.resh_nastyl_title")
           li
-            a href=shodovi_marshi_path title="Дізнатись все про сходові марші" сходові марші
+            a href=shodovi_marshi_path title=I18n.t("header.nav.shodovi_marshi_html_title") = t("header.nav.shodovi_marshi_title")
           li
-            a href=installation_path title="Правильний монтаж нашої продукції" монтаж
+            a href=installation_path title=I18n.t("header.nav.installation_html_title") = t("header.nav.installation_title")
           li
-            a href=technical_guide_path title="Технічні параметри про нашу продукцію в деталях" технічний довідник
+            a href=technical_guide_path title=I18n.t("header.nav.technical_guide_html_title") = t("header.nav.technical_guide_title")
       .columns.medium-4.large-3
-        p.title дивіться також
+        p.title = t("footer.titles.title_2")
         ul.footer-links
           li
-            a href=about_path title="Дізнайтесь про нас більше" про нас
+            a href=about_path title=I18n.t("header.top_nav.about_html_title") = t("header.top_nav.about_title")
           li
-            a href=blog_path title="Наші статті" статті
+            a href=blog_path title=I18n.t("header.top_nav.blog_html_title") = t("header.top_nav.blog_title")
           li
-            a href=news_path title="Цікаві новини" новини
+            a href=news_path title=I18n.t("header.top_nav.news_html_title") = t("header.top_nav.news_title")
           li
-            a href=contacts_path title="Як з нами зконтактувати" контакти
+            a href=contacts_path title=I18n.t("header.top_nav.contacts_html_title") = t("header.top_nav.contacts_title")
       .columns.medium-4.large-2
-        .calculate-btn.green title="Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
+        .calculate-btn.green title=I18n.t("calculator_html_title")
           span
             = inline_svg ('icons/ZRN-icons-calc-v1.svg')
-          p калькулятор
-        p.title ми в соціальних мережах
+          p = t("calculator_btn")
+        p.title = t("footer.titles.title_3")
         ul.social-links
           li
-            a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-face-v1.svg')
+            a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-face-v1.svg')
           li
-            a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-vk-v1.svg')
+            a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-vk-v1.svg')
           li
-            a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-google-v1.svg')
+            a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-google-v1.svg')
           li
-            a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-video-v1.svg')
+            a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-video-v1.svg')
 
   .bottom
     .row
@@ -50,11 +49,11 @@ footer
         .clearfix
           .floated
             p
-              | © 2014-2017 «Завод решіткового настилу», Всі права захищені.
-              a title="Передзвонити нам"
+              = t("footer.rights_reserved")
+              a title=I18n.t("components.call_us_html_title")
                 | 8 800 500-79-75
           .floated-right
             p 
-              | Розроблено
-              a title="Замовити крутий сайт в розробника"
-                | Студія «Миколи Вороніна»
+              = t("footer.developed_by")
+              a title=I18n.t("footer.developer_html_title")
+                = t("footer.developer_title")
