--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -179,7 +179,7 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Наш девіз
+      p.smaller = t("remarks.slogan")
       p.title Клієнт завжди отримує більше, ніж очікує!
       p.larger Спробуйте, і Ви назавжди залишитесь нашим прихильником, а ми станемо надійною опорою у Вашому бізнесі.
 
