--- a/app/views/pages/blog_one.html.slim
+++ b/app/views/pages/blog_one.html.slim
@@ -14,13 +14,13 @@
     .columns.large-2.xlarge-3.sticky-side-block
       ul
         li
-          a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-face-v1.svg')
+          a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-face-v1.svg')
         li
-          a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-vk-v1.svg')
+          a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-vk-v1.svg')
         li
-          a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-google-v1.svg')
+          a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-google-v1.svg')
         li
-          a title="Ми в соцмережі" = inline_svg ('icons/ZRN-icons-social-video-v1.svg')
+          a title=I18n.t("components.social_html_title") = inline_svg ('icons/ZRN-icons-social-video-v1.svg')
 
     .columns.large-10.xlarge-9.article-content
 
