--- a/app/views/pages/installation.html.slim
+++ b/app/views/pages/installation.html.slim
@@ -33,7 +33,7 @@
   .row
     .columns
 
-      .section-title.centered Основні принципи, якими ми керуємось при здійсненні монтажних робіт:
+      .section-title.centered = t("products.installation_principles")
 
       .principle-block
         .img-holder
@@ -71,5 +71,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Наша продукція
+      p.smaller = t("remarks.our_products")
       p.title Решітковий настил
