--- a/app/views/pages/new_one.html.slim
+++ b/app/views/pages/new_one.html.slim
@@ -58,5 +58,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Наступна новина
+      p.smaller = t("remarks.next_new")
       p.title Ламинарный копролит: основные моменты
