--- a/app/views/pages/resh_nastyl.html.slim
+++ b/app/views/pages/resh_nastyl.html.slim
@@ -21,7 +21,7 @@
   .resh-nastyl-sidenav
     .sticky-side-block
       .article-content
-        h2 Різновиди
+        h2 = t("products.resh_nastyl_types")
       ol.resh-nastyl-list
         li
           a зварний решітковий настил
@@ -42,5 +42,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller що ми зробили
-      p.title приклади використання
+      p.smaller = t("remarks.what_we_do")
+      p.title = t("remarks.examples_of_use")
