--- a/app/views/pages/resh_nastyl_one.html.slim
+++ b/app/views/pages/resh_nastyl_one.html.slim
@@ -8,7 +8,7 @@
   .bottom-holder
     .row
       .columns
-        .btn.green таблиця навантажень
+        .btn.green = t("components.loading_table_btn")
 
 .one-wrap
 
@@ -31,7 +31,7 @@
       p Quos pariatur, rem, accusamus aliquid provident sapiente. Deleniti aperiam obcaecati molestiae culpa, aut incidunt? Laudantium, odio cumque laboriosam error dignissimos corrupti molestiae?
 
 .examples-wrap.with-white-bg
-  .title приклади використання
+  .title = t("products.examples_of_use")
   .row.columns-left
     .columns.medium-4
       a.example-block
@@ -70,5 +70,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Дивіться також
+      p.smaller = t("remarks.see_also")
       p.title Сходи
