--- a/app/views/pages/shodovi_marshi.html.slim
+++ b/app/views/pages/shodovi_marshi.html.slim
@@ -23,7 +23,7 @@
       blockquote За час роботи ми розробили велику кількість різноманітних рішень сходових кліток, маршів та драбин, тому більшість потреб клієнтів можуть бути задоволені практично одразу.
 
       .examples-label
-        | Приклади використання
+        = t("products.examples_of_use")
 
 .clearfix.shodovi_marshi_example
   .img style="background-image: url('http://lorempixel.com/1600/960/')"
@@ -37,5 +37,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Дивіться також
+      p.smaller = t("remarks.see_also")
       p.title What to see
