--- a/app/views/pages/technical_loading_table.html.slim
+++ b/app/views/pages/technical_loading_table.html.slim
@@ -99,5 +99,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Наступний розділ
+      p.smaller = t("remarks.next_section")
       p.title Таблиця навантаження пресованого настилу
