--- a/app/views/pages/terms_of_use.html.slim
+++ b/app/views/pages/terms_of_use.html.slim
@@ -3,7 +3,7 @@
   .img-bg style="background-image: url('http://lorempixel.com/1600/960/')"
 
   .inner
-    p.banner-title правила користування сайтом
+    p.banner-title = t("terms_of_use")
 
 .one-wrap
 
