--- a/app/views/pages/technical_guide_one.html.slim
+++ b/app/views/pages/technical_guide_one.html.slim
@@ -86,5 +86,5 @@
 .remark-wrap
   .row
     .columns
-      p.smaller Наступний розділ
+      p.smaller = t("remarks.next_section")
       p.title Таблиця навантаження зварного настилу
